# Animation-Experiments

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  index.html
VS2019_solution/: Animation-Experiments.sln  Animation-Experiments.vcxproj  Animation-Experiments.vcxproj.filters
Xcode_Project/Animation Experiments/Animation Experiments.xcodeproj/: project.pbxproj
Xcode_Project/Animation Experiments/Animation Experiments.xcodeproj/project.xcworkspace/xcuserdata/maca.xcuserdatad/: UserInterfaceState.xcuserstate
dependencies/win/src/cgltf/: cgltf.c
dependencies/win/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
dependencies/win/src/stb_image/: stb_image.cpp
documentation/Slides/: Animation.pptx  Animation_2.pptx  Animation_3.pptx
inc/: AnimatedMesh.h  Blending.h  CCDSolver.h  Camera3.h  Clip.h  CrossFadeController.h  CrossFadeControllerMultiple.h  CrossFadeControllerQueue.h  CrossFadeControllerSingle.h  CrossFadeTarget.h  FABRIKSolver.h  GLTFLoader.h  IKCrossFadeController.h  IKCrossFadeTarget.h  IKLeg.h  IKMovementState.h  IKState.h  Intersection.h  ModelViewerState.h  MovementState.h  Pose.h  Ray.h  RearrangeBones.h  SkeletonViewer.h  SkeletonViewerClipped.h  Sky.h  Track.h  TrackVisualizer.h  Transform.h  TransformTrack.h  Triangle.h  Water.h  camera.h  game.h  game_object_3D.h  line.h  play_state.h  quat.h  shader.h  shader_loader.h  (+2 more)
public/: Animation-Experiments-UI.js  Animation-Experiments.js  Animation-Experiments.wasm  ae.html  ae.js  index.html
resources/models/ground/: catwalk.gltf  platform.gltf  terrain.gltf  water_terrain.gltf
resources/shaders/: ambient_diffuse_illumination.frag  animated_mesh.vert  animated_mesh_with_pregenerated_skin_matrices.vert  animated_mesh_with_pregenerated_skin_matrices_clipped.vert  bone.vert  bone_clipped.frag  bone_clipped.vert  diffuse.frag  diffuse_and_scaled_emissive_illumination_same_tex.frag  diffuse_and_scaled_emissive_illumination_with_scaled_uvs.frag  diffuse_illumination.frag  diffuse_illumination_with_25_lights.frag  joint.frag  joint.vert  joint_clipped.frag  joint_clipped.vert  line.frag  line.vert  lit.frag  mesh_with_simple_illumination.frag  preskinned.vert  static.vert  static_mesh.vert  static_mesh_clipped.vert  water.frag  water.vert
src/: AnimatedMesh.cpp  Blending.cpp  CCDSolver.cpp  Camera3.cpp  Clip.cpp  CrossFadeController.cpp  CrossFadeControllerMultiple.cpp  CrossFadeControllerQueue.cpp  CrossFadeControllerSingle.cpp  CrossFadeTarget.cpp  FABRIKSolver.cpp  GLTFLoader.cpp  IKCrossFadeController.cpp  IKCrossFadeTarget.cpp  IKLeg.cpp  IKMovementState.cpp  IKState.cpp  Intersection.cpp  ModelViewerState.cpp  MovementState.cpp  Pose.cpp  Ray.cpp  RearrangeBones.cpp  SkeletonViewer.cpp  SkeletonViewerClipped.cpp  Sky.cpp  Track.cpp  TrackVisualizer.cpp  Transform.cpp  TransformTrack.cpp  Triangle.cpp  Water.cpp  camera.cpp  game.cpp  game_object_3D.cpp  line.cpp  main.cpp  mesh.cpp  play_state.cpp  quat.cpp  (+4 more)
(+1 files in other folders)
